fix images overflow

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ body {
     min-height: 100vh;
 }
 
+img{
+    max-width: 95%;
+}
+
 h1 {
     font-size: 2.2em;
     line-height: 1.1;
